--- a/code/cfg/train.yml
+++ b/code/cfg/train.yml
@@ -14,8 +14,8 @@ TREE:
 
 TRAIN:
     FLAG: True
-    NET_G: ''  # Specify the generator path to resume training
-    NET_D: ''  # Specify the discriminator path to resume training
+    NET_G: '/content/drive/My Drive/tocollab/model2train/netG.pth'  # Specify the generator path to resume training
+    NET_D: '/content/drive/My Drive/tocollab/model2train/netD'  # Specify the discriminator path to resume training
     BATCH_SIZE: 20
     MAX_EPOCH: 1
     HARDNEG_MAX_ITER: 1500
